# src/api/subscriptions.rs
@@ -197,6 +197,7 @@ struct SubscriptionResponse {
     title_override: Option<String>,
     position: i64,
     title: String,
+    feed_url: String,
     site_url: Option<String>,
     unread_count: i64,
     refresh: Option<RefreshResponse>,
@@ -213,6 +214,7 @@ impl TryFrom<SubscriptionListItemDto> for SubscriptionResponse {
             title_override: item.title_override,
             position: item.position,
             title: item.title,
+            feed_url: item.feed_url,
             site_url: item.site_url,
             unread_count: item.unread_count,
             refresh: item.refresh.map(RefreshResponse::try_from).transpose()?,
